@@ -1,5 +1,6 @@
 v1.6.16
 Country should be not added in DB via query - FIXED
+New parameters post_type & category added to the listings map shortcode - CHANGED
 
 v1.6.15
 Google Services API can conflict with newer version of the Google Service Class - UPDATED
